apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-service
  namespace: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
