apps/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - git.kelbaz.dev
      secretName: git-kelbaz-tls
  rules:
    - host: git.kelbaz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-service
                port:
                  number: 80
